fix(UI): Fix collapsed Memos after editing being cut-off

--- a/ui/src/components/Memo/Memo.css
+++ b/ui/src/components/Memo/Memo.css
@@ -5,16 +5,6 @@
         @apply p-0;
     }
 
-    @container (width > 28rem) {
-        .memo-date.sm {
-            display: none;
-        }
-
-        .memo-date.md {
-            display: inline;
-        }
-    }
-
     .show-more-btn {
         @apply hidden;
     }
@@ -27,7 +17,7 @@
         @apply flex;
     }
 
-    &.expanded {
+    &.expanded, &.is-editing {
         max-height: max-content !important;
         overflow: auto !important;
     }
