--- a/ui/src/pages/Memos/List/list-masonry.css
+++ b/ui/src/pages/Memos/List/list-masonry.css
@@ -22,7 +22,7 @@
     }
 
     .memo {
-        @apply overflow-hidden;
+        @apply overflow-hidden h-fit;
 
         width: calc(50% - 0.25rem);
         max-height: 80vh;
